--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #Spring application name
 spring.application.name=cart-svc
-server.port=0
+
+# Server port
+server.port=@server.port@
+
+# Active Profile
+spring.profiles.active=@active.profile@
 
 #Expose all the actuator endopint
 management.endpoints.web.exposure.include=*
@@ -21,10 +26,12 @@ logging.file.max-size=20MB
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Register url to server
-eureka.client.service-url.defaultZone=http://localhost:8085/eureka/
-eureka.instance.hostname=localhost
-eureka.instance.instance-id=${eureka.instance.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+# Register url to server - changes for docker
+#eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=@instance.ip@
+eureka.client.service-url.defaultZone=@eureka.defaultzone@
+eureka.instance.instance-id=${eureka.instance.ip-address}:${server.port}:${spring.application.name}:${spring.profiles.active}:${spring.application.instance_id:${random.value}}
 
 # H2 database properties
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -45,4 +52,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 #Hazelcast config
-spring.hazelcast.config=classpath:cache/hazelcast-client.xml
+spring.hazelcast.config=classpath:cache/hazelcast-client-@active.profile@.xml
