--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.atanu.spring</groupId>
-	<artifactId>cart-svc</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>cart-svc</name>
+	<groupId>dev.atanu.ecom</groupId>
+	<artifactId>ecom-cart-svc</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>ecom-cart-svc</name>
 	<description>Cart Service</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<swagger.version>2.9.2</swagger.version>
-		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <resource.directory>src/main/resources</resource.directory>
 	</properties>
