--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -17,7 +17,7 @@ management.endpoints.web.exposure.include=*
 info.app.name=${spring.application.name}
 info.app.description=This application provides rest service api(s) to perform CRUD operation in Cart
 info.app.version=@project.version@
-
+build.number=@build.number@
 #--------------------------------------
 # Eureka Properties
 #--------------------------------------
